--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# IDE & Editor
+# IDE
 .vscode/
 .idea/
 *.swp
@@ -14,17 +13,46 @@ yarn-error.log*
 
 # OS
 Thumbs.db
-.env.local
-.env.*.local
+.DS_Store
+
+# Logs
+*.log
+logs/
+
+# Dependencies
+node_modules/
+vendor/
 
 # Build
 dist/
 build/
 
-# Logs
-logs/
-*.log
+# Cache
+.cache/
+*.cache
 
 # Temporary files
+tmp/
+temp/
 *.tmp
-.temp/
+
+# Database backups
+*.sql.bak
+*.sql.backup
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+
+# Test coverage
+coverage/
+.coverage
+
+# IDE specific
+.vscode/settings.json
+.idea/workspace.xml
